plugin/aws_key_management/aws_key_management_plugin.cc
@@ -161,6 +161,10 @@ public:
   {
   }
 
+  virtual void Flush(void) override
+  {
+  }
+
 protected:
   virtual void ProcessFormattedStatement(Aws::String&& statement) override
   {
